Source/JavaScriptCore/dfg/DFGOSRExitCompilationInfo.h
@@ -35,6 +35,7 @@ struct OSRExitCompilationInfo {
     MacroAssembler::JumpList m_failureJumps;
     MacroAssembler::Label m_replacementSource;
     MacroAssembler::Label m_replacementDestination;
+    MacroAssembler::PatchableJump m_patchableJump;
 };
 
 } } // namespace JSC::DFG
